添加数据源定义

--- a/examples/conf/config.toml
+++ b/examples/conf/config.toml
@@ -1,7 +1,8 @@
 # 所有的路径填相对exe执行文件的相对路径
 # 全局的一些配置
+# 处理excel的配置
 [table]
-    # 策划配置表目录
+    # Excel策划配置表目录
     src_dir = "./excels"
     # 表格字段名行号
     name = 0
