--- a/examples/lua_meta/base_test.toml
+++ b/examples/lua_meta/base_test.toml
@@ -1,7 +1,7 @@
 
 # 目标名字
 target = "base_test"
-mode = ""
+mode = "#"
 source_type = "excel"
 
 sources = [
@@ -10,7 +10,7 @@ sources = [
 
 
 fields = [
-    { active = false,   sname = "id" ,      tname = "id" ,      type = "int" ,  key = 1,    desc = "主id"},
-    { active = false,   sname = "name" ,    tname = "name" ,    type = "string" ,  key = 0,    desc = "名字"},
-    { active = false,   sname = "age" ,     tname = "age" ,     type = "int" ,  key = 0,    desc = "年龄"},
+    { active = true,   sname = "id" ,      tname = "id" ,      type = "int" ,  key = 1,    desc = "主id"},
+    { active = true,   sname = "name" ,    tname = "name" ,    type = "string" ,  key = 0,    desc = "名字"},
+    { active = true,   sname = "age" ,     tname = "age" ,     type = "int" ,  key = 0,    desc = "年龄"},
 ]
