--- a/examples/conf/config.toml
+++ b/examples/conf/config.toml
@@ -31,5 +31,8 @@ output_dir = "./temp_output_json"
 
 [meta.rule_cs_proto]
 config_dir = "./cs_meta"
-proto_dir = "./temp_output_cs_proto"
+proto_temp_dir = "./temp_proto"
+proto_cs_dir = "./temp_output_proto_cs"
 bytes_dir = "./temp_output_cs_bytes"
+protoc_win_dir = "./protoc.exe"
+protoc_mac_dir = "./protoc"
