--- a/examples/conf/config.toml
+++ b/examples/conf/config.toml
@@ -23,17 +23,24 @@ gen_dir = "./temp_meta"
 
 [meta.rule_lua]
 config_dir = "./lua_meta"
+output_dir = "./output/lua"
 temp_dir = "./temp_lua"
+post_process = true     #导出配置的后处理开关
+post_process_lua = "./tools/DataTableOptimizer.lua"
+post_work_dir = "./"
+lua_win_dir = "./tools/lua5.3/lua53.exe"
+lua_mac_dir = "./tools/lua5.3/lua53"
+
 
 [meta.rule_json]
 config_dir = "./json_meta"
-output_dir = "./temp_output_json"
+output_dir = "./output/json"
 
 [meta.rule_cs_proto]
 config_dir = "./cs_meta"
 proto_package = "table"
 proto_temp_dir = "./temp_proto"
-proto_cs_dir = "./temp_output_proto_cs"
-bytes_dir = "./temp_output_cs_bytes"
-protoc_win_dir = "./protoc.exe"
-protoc_mac_dir = "./protoc"
+proto_cs_dir = "./output/proto_cs"
+bytes_dir = "./output/proto_bytes"
+protoc_win_dir = "./tools/protoc.exe"
+protoc_mac_dir = "./tools/protoc"
