结构调整，以及添加cs_bin模式,附带测试工程

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 
 examples/temp_*
 examples/output/
+examples/projects/proj_cs_json2bin/.vs
+examples/projects/proj_cs_json2bin/obj
+examples/projects/proj_cs_json2bin/bin
+examples/projects/proj_cs_bin/obj
+examples/projects/proj_cs_bin/bin
+examples/projects/proj_cs_bin/.vs
