--- a/examples/lua_meta/base_test.toml
+++ b/examples/lua_meta/base_test.toml
@@ -13,4 +13,5 @@ fields = [
     { active = true,   sname = "id" ,      tname = "id" ,      type = "int" ,  key = 1,    desc = "主id"},
     { active = true,   sname = "name" ,    tname = "name" ,    type = "string" ,  key = 0,    desc = "名字"},
     { active = true,   sname = "age" ,     tname = "age" ,     type = "int" ,  key = 0,    desc = "年龄"},
+    { active = true,   sname = "course" ,  tname = "course" ,  type = "[]int" ,  		key = 0,    desc = "年龄"},
 ]
