--- a/examples/projects/proj_cs_bin/proj_cs_bin.csproj
+++ b/examples/projects/proj_cs_bin/proj_cs_bin.csproj
@@ -14,6 +14,11 @@
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  
+  
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+  </ItemGroup>
 
 	
 </Project>
