--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,12 +19,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.19
+        go-version: '1.20'
 
-    - run: go build -o bin/table-export_linux_amd64 . 
-    - run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o bin/table-export_amd64.exe .
-    - run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o bin/table-export_darwin_amd64 .
-    - run: CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -o bin/table-export_darwin_arm64 .
+    - run: go build -o bin/${{ github.event.repository.name }}_linux_x64 . 
+    - run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o bin/${{ github.event.repository.name }}_win_x64.exe 
+    - run: CGO_ENABLED=0 GOOS=windows GOARCH=arm64 go build -o bin/${{ github.event.repository.name }}_win_arm64.exe .
+    - run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o bin/${{ github.event.repository.name }}_darwin_x64 .
+    - run: CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -o bin/${{ github.event.repository.name }}_darwin_arm64 .
     
     - name: Release
       uses: softprops/action-gh-release@v1
