--- a/examples/cs_bin_meta/base_test.toml
+++ b/examples/cs_bin_meta/base_test.toml
@@ -13,5 +13,10 @@ fields = [
     { active = true,   sname = "id" ,      tname = "id" ,      type = "int" ,  		key = 1,    desc = "主id"},
     { active = true,   sname = "name" ,    tname = "name" ,    type = "string",  	key = 0,    desc = "名字"},
     { active = true,   sname = "age" ,     tname = "age" ,     type = "int" ,  		key = 0,    desc = "年龄"},
-	{ active = true,   sname = "course" ,  tname = "course" ,  type = "[]int" ,  		key = 0,    desc = "学科"},
+	{ active = true,   sname = "course" ,  tname = "course" ,  type = "[]int" ,  	key = 0,    desc = "学科"},
+]
+
+checks = [
+    { active = true, global = false, code = """ $.age < 60 """ },
+    { active = true, global = true, code = """ table[int32(4)].name =="李四" """ },
 ]
