--- a/examples/cs_bin_config/table_meta/base_test.toml
+++ b/examples/cs_bin_config/table_meta/base_test.toml
@@ -17,6 +17,7 @@ fields = [
     { active = true,   sname = "big_data_id" ,      tname = "bigDataId" ,       type = "int" ,  	        key = 0,    desc = "对应big_data表id"},
     { active = true,   sname = "item_type" ,        tname = "itemType" ,        type = "ItemType" ,  	    key = 0,    desc = "道具类型，测试枚举1"},
     { active = true,   sname = "condition_type" ,   tname = "conditionType" ,  type = "ConditionType" ,  	key = 0,    desc = "条件类型，测试枚举2"},
+    { active = true,   sname = "position",          tname = "position",     type = "PointInt",  	key = 0,    desc = "位置"},
 ]
 
 # 数据检测示例，$代表一行数据，table代表当前表，global代表全局，global[name]可以取到其他表的数据
