新增常用的内置字段类型

--- a/examples/conf/config.toml
+++ b/examples/conf/config.toml
@@ -78,6 +78,8 @@ Debug.LogError($"[%s] config id not found,id:{%s}");
     # 添加内置代码的扩展类型支持
     builtin_field_types = [
         "PointInt",
+        "KVList_IntInt",
+        "KVList_IntFloat",
     ]
 
 
